--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
 
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-iostreams
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-iostreams', version: '2.13.3'
+
     // https://mvnrepository.com/artifact/commons-codec/commons-codec
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.14'
 
