Fix gradle.build files to allow assemble task to work

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,7 @@ branches:
   only:
     - master
 
-script: ./gradlew runtime jpackage
+script: ./gradlew jpackage
+
+deploy:
+  skip_cleanup: true
