--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,32 @@
 language: java
-
 before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
+- rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+- rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-
+  - "$HOME/.gradle/caches/"
+  - "$HOME/.gradle/wrapper/"
 jobs:
   include:
-    - os: linux
-      dist: bionic
-      jdk: openjdk14
-    - os: osx
-      osx_image: xcode12
-      jdk: openjdk14
-
+  - os: linux
+    dist: bionic
+    jdk: openjdk14
+  - os: osx
+    osx_image: xcode12
+    jdk: openjdk14
 branches:
   only:
-    - master
-
-script: ./gradlew jpackage
-
+  - master
+script: "./gradlew jpackage"
 deploy:
+  provider: releases
+  api_key:
+    secure: $GITHUB_API_KEY
+  file_glob: true
+  file:
+    - "$HOME/build/jpackage/DocxToBB_linux_x64-*"
+    - "$HOME/build/jpackage/DocxToBB_macos_x64-*"
+  on:
+    repo: dresch86/docxtobb-java
   skip_cleanup: true
+  draft: true
