--- a/build.gradle
+++ b/build.gradle
@@ -106,7 +106,7 @@ runtime {
         } else if (currentOS.isLinux()) {
             installerName = 'DocxToBB_linux_x64'
             installerOptions += ['--linux-shortcut', '--linux-app-category', 'Office', '--linux-menu-group', 'Application']
-            imageOptions = ['--icon', 'src/main/resources/mainIcon.svg']
+            imageOptions = ['--icon', 'src/main/resources/mainIcon.png']
         } else if (currentOS.isMacOsX()) {
             installerName = 'DocxToBB_macos_x64'
             imageOptions = ['--icon', 'src/main/resources/mainIcon.icns']
