--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,24 @@ cache:
   directories:
   - "$HOME/.gradle/caches/"
   - "$HOME/.gradle/wrapper/"
+install:
+- true
 jobs:
   include:
   - os: linux
     dist: bionic
     jdk: openjdk14
+    addons:
+      apt:
+        packages:
+          - fakeroot
   - os: osx
     osx_image: xcode12
     jdk: openjdk14
 branches:
   only:
   - master
-script: "./gradlew jpackage"
+script: gradlew clean jpackage
 deploy:
   provider: releases
   api_key:
@@ -27,7 +33,9 @@ deploy:
     - build/jpackage/DocxToBB_linux_x64-*
     - build/jpackage/DocxToBB_macos_x64-*
   skip_cleanup: true
+  tag_name: "v1.0.0"
   on:
     repo: dresch86/docxtobb-java
     tags: true
+    branch: master
   draft: true
