--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
+if: tag IS present
 install:
 - true
 before_cache:
@@ -20,7 +21,7 @@ jobs:
     script: ./gradlew clean jpackage
     deploy:
       provider: releases
-      api_key: $GITHUB_API_KEY
+      token: $GITHUB_API_KEY
       file_glob: true
       file:
         - "build/jpackage/*.deb"
@@ -28,7 +29,6 @@ jobs:
       on:
         repo: dresch86/docxtobb-java
         tags: true
-        branch: master
       draft: true
   - os: osx
     osx_image: xcode12
@@ -36,7 +36,7 @@ jobs:
     script: ./gradlew clean jpackage
     deploy:
       provider: releases
-      api_key: $GITHUB_API_KEY
+      token: $GITHUB_API_KEY
       file_glob: true
       file:
         - "build/jpackage/*.dmg"
@@ -45,17 +45,18 @@ jobs:
       on:
         repo: dresch86/docxtobb-java
         tags: true
-        branch: master
       draft: true
   - os: windows
     language: shell
     before_install:
       - choco install openjdk
       - choco install gradle
-    script: ./gradlew.bat clean jpackage
+    script: 
+      - cmd.exe /C 'refreshenv' 
+      - ./gradlew.bat clean jpackage
     deploy:
       provider: releases
-      api_key: $GITHUB_API_KEY
+      token: $GITHUB_API_KEY
       file_glob: true
       file:
         - "build/jpackage/*.exe"
@@ -64,5 +65,4 @@ jobs:
       on:
         repo: dresch86/docxtobb-java
         tags: true
-        branch: master
       draft: true
