--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,8 @@ jobs:
       - choco install openjdk
       - choco install gradle
     script: 
-      - win-build.bat 
-      - gradlew.bat clean jpackage
+      - ./win-build.bat 
+      - ./gradlew.bat clean jpackage
     deploy:
       provider: releases
       token: $GITHUB_API_KEY
