Attempt #5 to fix Windows build on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ jobs:
       - choco install openjdk
       - choco install gradle
     script: 
-      - export JAVA_HOME="/c/Program Files/OpenJDK"
+      - export JAVA_HOME="/c/Program Files/OpenJDK/jdk-14.0.2"
       - export PATH=$JAVA_HOME/bin:$PATH 
       - ./gradlew.bat clean jpackage
     deploy:
