Attempt #10 to build on Travis CI - Windows

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ jobs:
       - choco install openjdk
       - choco install gradle
       - choco install wixtoolset
+      - powershell RefreshEnv
     script: 
       - powershell RefreshEnv && ./gradlew.bat clean jpackage
     deploy:
