--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,15 @@
 plugins {
-    // Apply the java plugin to add support for Java
-    id 'java'
-
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
 
     // JavaFX
-    id "org.openjfx.javafxplugin" version "0.0.9"
+    id "org.openjfx.javafxplugin" version "0.0.14"
 
-    // For non-modularized packaging
-    id 'org.beryx.runtime' version '1.11.2'
-
-    // For FAT jat
-    id "com.github.johnrengelman.shadow" version "6.0.0"
+    id 'io.github.fvarrui.javapackager.plugin' version "1.7.5"
 }
 
-sourceCompatibility = JavaVersion.VERSION_14
-targetCompatibility = JavaVersion.VERSION_14
+sourceCompatibility = JavaVersion.VERSION_20
+targetCompatibility = JavaVersion.VERSION_20
 
 repositories {
     jcenter()
@@ -54,7 +47,7 @@ dependencies {
     implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
 
     // For converting legacy WMF images to SVG
-    implementation project('third-party:wmf2svg')
+    implementation project(':third-party:wmf2svg')
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
@@ -65,8 +58,8 @@ tasks.jar {
 }
 
 javafx {
-    version = '14'
-    modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml']
+    version = '20.0.2'
+    modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.fxml']
 }
 
 application {
@@ -81,38 +74,19 @@ jar {
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
 }
 
-runtime {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+task packageDocxToBB(type: io.github.fvarrui.javapackager.gradle.PackageTask, dependsOn: build) {
+    // mandatory
+    mainClass = 'org.ose.docxtobb.Launcher'
 
-    launcher {
-        noConsole = true
-    }
+    additionalModulePaths = [file("$System.env.PATH_TO_FX_MODS")]
+    modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.fxml']
 
-    jpackage {
-        def currentOS = org.gradle.internal.os.OperatingSystem.current()
-        imageName = 'DocxToBB'
-
-        installerOptions += [
-            '--description', 'DocxToBB converts specially formatted Word documents to Blackboard Learn test packages',
-            '--copyright', 'Copyright 2020 Daniel J. Resch, Ph.D.'
-        ]
-
-        if (currentOS.isWindows()) {
-            installerName = 'DocxToBB_win_x64'
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
-            imageOptions = ['--icon', 'src/main/resources/mainIcon.ico']
-        } else if (currentOS.isLinux()) {
-            installerName = 'DocxToBB_linux_x64'
-            installerOptions += ['--type', 'deb', '--linux-shortcut', '--linux-app-category', 'Office', '--linux-menu-group', 'Application']
-            imageOptions = ['--icon', 'src/main/resources/mainIcon.png']
-        } else if (currentOS.isMacOsX()) {
-            installerName = 'DocxToBB_macos_x64'
-            imageOptions = ['--icon', 'src/main/resources/mainIcon.icns']
-        } else {
-            println "Unsupported OS"
-            System.exit(1)
-        }
-    }
+    // optional
+    bundleJre = true
+    generateInstaller = true
+    administratorRequired = false
 }
